testdata/baselines/reference/submodule/conformance/declarationFilesForNodeNativeModules(allowarbitraryextensions=false,module=node18).errors.txt
main.ts(1,22): error TS2307: Cannot find module './dir/native.node' or its corresponding type declarations.


==== main.ts (1 errors) ====
    import mod = require("./dir/native.node");
                         ~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './dir/native.node' or its corresponding type declarations.
    mod.doNativeThing("good");
    
==== package.json (0 errors) ====
    {"type": "module"}
==== dir/package.json (0 errors) ====
    {"type": "commonjs"}
==== dir/native.d.node.ts (0 errors) ====
    export function doNativeThing(flag: string): unknown;